--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,6 +7,13 @@
   pointer-events: none;
 }
 
+.room {
+  cursor: pointer;
+  padding: 30px;
+  border: 1px solid #ccc;
+  width: 100px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
